# EasyOIDC

./: .gitignore  README.md  examples_requirements.txt  pyproject.toml  requirements.txt  setup.py  test_bottle_session.py
.github/workflows/: python-publish.yml
.streamlit/: config.toml
EasyOIDC/: __init__.py  auth.py  config.py  session.py  utils.py
EasyOIDC/frameworks/: __init__.py  flask.py  nicegui.py  streamlit.py  taipy.py
examples/: .env.google  bottle_example.py  flask_example.py  flask_high_level.py  flask_low_level.py  nicegui_example.py  nicegui_high_level.py  nicegui_low_level.py  requirements.txt  streamlit_example.py  taipy_example.py  taipy_high_level.py
test/: easyoidc_tests.py
tests/: test_imports.py
