[project]
name = "EasyOIDC"
version = "0.1.11"
description = "Easy integration with OIDC authentication servers"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Juan Pablo Manson", email = "jpmanson@gmail.com"}
]
keywords = ["oidc", "oauth", "authentication", "openid-connect"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "authlib>=1.3.0",
    "requests>=2.31.0",
    "python-decouple>=3.8",
    "redis-collections>=0.12.0",
]

[project.optional-dependencies]
flask = ["flask>=2.3.3"]
nicegui = ["nicegui>=1.4.0", "fastapi"]
taipy = ["taipy>=2.4.0"]
dev = ["pytest", "ruff"]

[project.urls]
Homepage = "https://github.com/jpmanson/EasyOIDC"
Repository = "https://github.com/jpmanson/EasyOIDC"
Issues = "https://github.com/jpmanson/EasyOIDC/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["EasyOIDC"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
